[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastfuels-sdk"
description = "3D Fuels for Next Generation Fire Models"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "geopandas",
    "numpy",
    "pandas",
    "pydantic>=2",
    "requests",
    "scipy",
    "urllib3>=2.1.0",
    "zarr",
]

[project.urls]
Homepage = "https://github.com/silvxlabs/fastfuels-sdk-python"
"Bug Tracker" = "https://github.com/silvxlabs/fastfuels-sdk-python/issues"

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "ipykernel",
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.9.0.post0",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    # v2 is under development and not yet distributable: its runtime deps
    # (httpx, attrs, python-dateutil) live in the dev group until the v2
    # preview ships. The Phase 2 release swaps this for fine-grained
    # excludes (v2/*.sh, v2/COMPARISON.md, v2/draft_*.py), mirroring v1's.
    "fastfuels_sdk/v2",
    # Client regeneration scaffolding — repo-only, not for distribution
    "fastfuels_sdk/v1/client_library/*.sh",
    "fastfuels_sdk/v1/client_library/README.md",
    "fastfuels_sdk/v1/client_library/api_spec.json",
    "fastfuels_sdk/v1/client_library/openapi-generator-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["fastfuels_sdk"]
